# rCTRL3

./: .gitignore  README.md
gui/: Cargo.toml  layout.hdl
gui/src/: gui.rs  main.rs
mcu/: Cargo.toml  Embed.toml  layout.hdl  layout2.hdl  project.jflash
mcu/.cargo/: config.toml
mcu/.helix/: languages.toml
mcu/app/: Cargo.toml
mcu/app/src/: main.rs  net.rs
mcu/hal/: Cargo.toml
mcu/hal/board/: Cargo.toml
mcu/hal/board/src/: bmi088.rs  lib.rs  spi_bus.rs
mcu/hal/core/: Cargo.toml
mcu/hal/core/src/: buffer.rs  dma.rs  gmac.rs  i2c.rs  lib.rs  rtt.rs  spi.rs  uart.rs
mcu/hal/core/src/clock/: mainck.rs  mck.rs  mod.rs  slck.rs
mcu/hal/core/src/pio/: bank.rs  mod.rs  pin.rs
mcu/hal/core/tests/: integration.rs
mcu/hal/macro/: Cargo.toml
mcu/hal/macro/src/: lib.rs
mcu/hal/src/: lib.rs
mcu/lib/: Cargo.toml
mcu/lib/src/: lib.rs
