[package]
name = "app"
edition = "2021"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.1", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
defmt = { version = "0.3", features = ["encoding-rzcobs"] }
defmt-rtt = "0.4.0"
hal = { path = "../hal" }
panic-probe = { version = "0.3", features = ["print-defmt"] }
rtic = { version = "2.0.0", features = [ "thumbv7-backend" ] }
rtic-monotonics = { version = "1.0.0", features = [ "cortex-m-systick" ]}
samv71-pac = { path = "../../../samv71-pac", features = ["rt", "critical-section"] }
